--- a/web/saito/css-imports/saito-variables.css
+++ b/web/saito/css-imports/saito-variables.css
@@ -28,25 +28,19 @@ font imports
 }
 
 @font-face {
-  font-family: "ds-digital";
-  src: url("/saito/fonts/DS-DIGI.TTF") format("truetype");
+  font-family: "digital-7";
+  src: url("/saito/fonts/digital-7.mono.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "ds-digital";
-  src: url("/saito/fonts/DS-DIGII.TTF") format("truetype");
+  font-family: "digital-7";
+  src: url("/saito/fonts/digital-7.mono.italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
-@font-face {
-  font-family: "ds-digital";
-  src: url("/saito/fonts/DS-DIGIB.TTF") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-}
 
 
 :root {
