--- a/mods/chess/web/css/chess-base.css
+++ b/mods/chess/web/css/chess-base.css
@@ -10,7 +10,7 @@
 	display: block;
 	font-size: 3rem;
 	filter: none;
-	font-family: "ds-digital", monospace, courier-new, courier, sans-serif;
+	font-family: "digital-7", monospace, courier-new, courier, sans-serif;
 	background: #fff;
 	border: 1px solid #888;
 	margin: 3px;
