--- a/mods/poker/web/css/poker-base.css
+++ b/mods/poker/web/css/poker-base.css
@@ -60,6 +60,19 @@ body {
 	border-radius: 6px;
 }
 
+.dealer-button {
+  width: 5rem;
+  height: 5rem;
+  border: 1px solid white;
+  border-radius: 100%;
+  overflow: hidden;
+  background-image: url('/saito/img/arcade/cards/red_back.png');
+  background-size: 169%;
+  background-position: center;
+  position: absolute;
+  right: calc(100% + 5px);
+}
+
 @media screen and (max-width: 900px) {
   .deal {
     gap: 5px;
