--- a/web/saito/css-imports/game-hud.css
+++ b/web/saito/css-imports/game-hud.css
@@ -182,7 +182,7 @@
     user-select: none;
 }
 
-.hud .controls ul {
+.controls ul {
     width: min(500px,100%);
     margin-left: auto;
     margin-right: auto;
@@ -192,7 +192,7 @@
     flex-direction: column;
 }
 
-.hud .controls ul li, .hud .options {
+.controls ul li, .options {
     background-color: whitesmoke;
     height: 8rem;
     border-top: 1px solid var(--saito-border-color);
@@ -207,7 +207,7 @@
     justify-content: center;
 }
 
-.hud .controls ul li:hover , .hud .options:hover {
+.controls ul li:hover , .options:hover {
    background-color: #e7e7e7;
 }
 
