add Saito-header to games and clean up slide in menu

--- a/web/saito/css-imports/game-layout.css
+++ b/web/saito/css-imports/game-layout.css
@@ -9,6 +9,10 @@
 
 :root {
   --background-color-shim-normal: var(--background-color-shim-dark);
+
+  /* for the header */
+  --saito-header-height: 4rem;
+  --saito-arcade-header-background: transparent;
 }
 
 body {
