fix menu display TS & HIS

--- a/mods/twilight/web/css/twilight-base.css
+++ b/mods/twilight/web/css/twilight-base.css
@@ -355,6 +355,7 @@ body {
 	height: 100vh;
 	/*overflow: auto; We don't want scroll bars showing up*/
 	margin-top: unset;
+	position: absolute;
 }
 
 /** Modal **/
