--- a/web/saito/css-imports/game-scoreboard.css
+++ b/web/saito/css-imports/game-scoreboard.css
@@ -7,7 +7,7 @@
   width: fit-content;
   padding: 4px 8px;
   /*max-height: 40px;*/
-  background-color: #d5d5d5cc;
+  background-color: var(--game-menu-background);
   border: 1px solid #444;
   border-radius: 5px;
   box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
@@ -17,6 +17,12 @@
   justify-content: space-between;
 }
 
+#saito-header .game-scoreboard {
+  position: relative;
+  transform: unset;
+  left: unset;
+  margin: auto;
+}
 
 .game-scoreboard span {
   width: min-content;
