--- a/mods/atr/web/css/atr-base.css
+++ b/mods/atr/web/css/atr-base.css
@@ -23,11 +23,11 @@
 
     .saito-container.atr {
     	display: block;
+        width: auto;
     }
 
     .dashboard-container {
-        width: 100%;
-        max-width: 1200px;
+        min-width: 1200px;
         background-color: #FFFFFF;
         border-radius: 8px;
         padding: 1.2rem;
