--- a/mods/website/web/css/website-new.css
+++ b/mods/website/web/css/website-new.css
@@ -27,6 +27,7 @@ font imports
 
 :root {
     --dreamscape: linear-gradient(125deg, #e8001e 30%, #0000 55%, #ff8235 80%), linear-gradient(40deg, #f7009b, #f7009b, #f71f3d, #f71f3d, #e98eaf, #0000), linear-gradient(180deg, #e9ce93, #f71f3d);
+    --vh: 1vh;
 }
 
 
@@ -42,6 +43,8 @@ body {
     width: 100%;
     position: relative;
     font-size: 1rem;
+    height: 100%;
+    overflow: hidden;
 }
 
 html {
@@ -51,14 +54,20 @@ html {
 body {
     line-height: 1.6;
     font-family: visuelt-light, sans-serif, Arial;
+    min-height: 100vh;
+    min-height: 100dvh;
+    min-height: -webkit-fill-available;
 }
 
 section {
-    height: 100vh;
+    height: calc(var(--vh) * 100);
+    min-height: calc(var(--vh) * 100);
     width: 100%;
+    position: relative;
+    overflow: hidden;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     scroll-snap-align: start;
 }
 
@@ -67,11 +76,30 @@ a {
     color: #fff;
 }
 
+h1 {
+    font-size: 4rem;
+    color: #f71f3d;
+}
+
+h2 {
+    font-size: 2.2rem;
+    font-weight: normal;
+}
+
+h3 {
+    font-size: 2rem;
+    font-weight: normal;
+}
+
 .container {
-    height: 100vh;
-    width: 100%;
-    overflow-y: scroll;
+    height: 100%;
+    overflow-y: auto;
     overflow-x: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     scroll-snap-type: y mandatory;
 }
 
@@ -81,7 +109,7 @@ a {
 }
 
 #consensus {
-    background: var(--dreamscape);
+    background-color: #444;
     flex-direction: column;
     color: #fff;
 }
@@ -90,39 +118,46 @@ a {
     background-color: #efefef;
 }
 
-#features {
+#community {
     background-color: #fff;
+    align-items: center;
+    flex-direction: column;
+}
+
+#web3 {
+    background: var(--dreamscape);
+    flex-direction: column;
 }
 
 #contact {
     background-color: #333;
     color: white;
+    align-items: center;
 }
 
 .nav {
     position: fixed;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
+    right: 2rem;
+    bottom: 2rem;
     z-index: 100;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: auto;
 }
 
 .nav a {
-    display: block;
-    width: 10px;
-    height: 10px;
-    margin: 10px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
-    background: rgba(255, 255, 255, 0.5);
-    border: 2px solid #f71f3d;
-    transition: 0.3s;
+    background: hsla(0, 0%, 100%, 0.3);
+    transition: all 0.3s ease;
 }
 
 .nav a.active {
-    background: #fff;
-    transform: scale(1.5);
-    border-color: #f71f3d;
+    background: white;
 }
+
 
 .cube-container {
     position: relative;
@@ -174,53 +209,68 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow: visible;
+}
+
+object.saito-text {
+    width: 100%;
+    z-index: 9999;
+    position: relative;
+}
+
+
+@media (orientation: portrait) {
+    object.saito-text {
+        transform: rotate(90deg) translateX(-97%);
+        transform-origin: bottom left;
+    }
 }
 
 /* Portrait styles (default) */
-.saito-text {
+.saito-text-container {
     position: absolute;
     width: 33vh;
-    top: -50vh;
+    bottom: 110vh;
     left: 0;
-    transform: rotate(90deg) translateY(10%);
-    transform-origin: bottom left;
     animation: slideTextPortrait 1s ease-out 1.5s forwards;
+    z-index: 999;
 }
 
 @keyframes slideTextPortrait {
     0% {
-        top: -50vh;
+        bottom: 110vh;
         opacity: 0;
     }
 
     100% {
-        top: 56vh;
+        bottom: 0;
         opacity: 1;
     }
 }
 
+
+
 /* Landscape styles */
 @media (orientation: landscape) {
-    .saito-text {
+    .saito-text-container {
         width: 70vw;
+        max-width: 70rem;
         height: auto;
-        top: -100vh;
+        bottom: 110vh;
         left: 0;
-        transform: none;
         transform-origin: initial;
         animation: slideTextLandscape 1s ease-out 1.5s forwards;
-        transform: translateY(-90%);
+        transform: translateY(10%);
     }
 
     @keyframes slideTextLandscape {
         0% {
-            top: -100vh;
+            bottom: 110vh;
             opacity: 0;
         }
 
         100% {
-            top: calc(100vh);
+            bottom:  0;
             opacity: 1;
         }
     }
@@ -236,7 +286,7 @@ a {
 }
 
 .header-logo {
-    height: 40px;
+    height: 60px;
     display: none;
 }
 
@@ -304,23 +354,31 @@ a {
 
     .main-header:not(.scrolled) .menu-title {
         color: white;
-        font-size: 2rem;
         margin-bottom: 1rem;
         font-weight: normal;
     }
 
+    .menu-links {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    h1.menu-title {
+        font-size: 2.5rem;
+    }
+    
     .main-header:not(.scrolled) .menu-button {
         display: block;
-        width: 100%;
+        width: 25rem;
         padding: 0.75rem 1rem;
-        margin-bottom: 0.5rem;
         color: white;
         text-decoration: none;
-        border: 1px solid #fff8;
+        border: 2px solid #fff;
         border-radius: 50px;
         transition: all 0.3s ease;
         text-align: center;
-        font-size: 1.6rem;
+        font-size: 2rem;
     }
 
     .main-header:not(.scrolled) .menu-button:hover {
@@ -336,7 +394,7 @@ a {
 
     .main-header.scrolled .header-logo {
         display: block;
-        height: 40px;
+        height: 60px;
     }
 
     .main-header.scrolled .menu-title {
@@ -380,34 +438,51 @@ a {
 }
 
 .hamburger {
-    background: none;
-    border: none;
-    padding: 1rem;
-    cursor: pointer;
+    position: fixed;
     z-index: 1001;
+    width: 30px;
+    height: 24px;
+    cursor: pointer;
+    right: 1.5rem;
+    top: 1.5rem;
 }
 
 .hamburger span {
-    display: block;
-    width: 25px;
+    position: absolute;
+    width: 100%;
     height: 3px;
-    background: #fff;
-    margin: 5px 0;
-    transition: 0.3s;
+    background: white;
+    transition: all 0.3s ease;
+    border-radius: 3px;
 }
 
-.hamburger.active span:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
+.hamburger span:first-child {
+    top: 0;
+}
+
+.hamburger span:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.hamburger span:last-child {
+    bottom: 0;
+}
+
+/* Active state for hamburger spans */
+.hamburger.active span:first-child {
+    transform: rotate(45deg) translate(7px, 7px);
 }
 
 .hamburger.active span:nth-child(2) {
     opacity: 0;
 }
 
-.hamburger.active span:nth-child(3) {
+.hamburger.active span:last-child {
     transform: rotate(-45deg) translate(7px, -7px);
 }
 
+/* Mobile menu content styles */
 .mobile-menu-content {
     display: none;
     position: fixed;
@@ -468,7 +543,7 @@ a {
     .main-header:not(.scrolled) .menu-container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 1rem;
+        gap: 2rem;
     }
 }
 
@@ -478,6 +553,7 @@ a {
     top: -4rem;
     right: -7rem;
     width: 60vw;
+    max-width: 70rem;
     height: auto;
     opacity: 0;
     animation: fadeInCube 0.5s ease-out 2.5s forwards;
@@ -501,6 +577,103 @@ a {
     }
 }
 
+@media (orientation: landscape) and (max-width: 1500px) {
+    .saito-text-container {
+        max-width: 45vw;
+    }
+
+    .background-cube {
+        max-width: 30vw;
+    }
+    .main-header:not(.scrolled) .desktop-menu {
+        position: fixed;
+        top: 3rem;
+        left: 8vw;
+        width: 40%;
+    }
+
+    .menu-button {
+        font-size: 1.5rem;
+    }
+
+
+}
+
+@media (orientation: landscape) and (max-height: 1000px) {
+    .saito-text-container {
+        max-width: 45vw;
+    }
+
+    .background-cube {
+        max-width: 30vw;
+    }
+    .main-header:not(.scrolled) .desktop-menu {
+        position: fixed;
+        top: 3rem;
+        left: 8vw;
+        width: 40%;
+    }
+}
+
+
+
+.community-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.community-image {
+    flex: 1;
+}
+
+.community-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.community-divider {
+    width: 2px;
+    height: 300px;
+    background-color: #f61745;
+}
+
+.community-text {
+    flex: 1;
+    font-size: 1.2rem;
+    line-height: 1.6;
+}
+
+.community-text p {
+    margin-bottom: 1.5rem;
+}
+
+.community-text a {
+    color: #f61745;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.community-text a:hover {
+    color: #d01238;
+}
+
+@media (max-width: 768px) {
+    .community-content {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .community-divider {
+        width: 80%;
+        height: 2px;
+    }
+}
 /* Contact section styles */
 .contact-container {
     display: flex;
@@ -605,33 +778,15 @@ a {
 
 svg#top_animation {
     width: 100%;
+    max-width: 120vh;
+    margin: auto;
 }
 
 .animation-one-controls {
     font-size: 2rem;
+    margin-left: 14vw;
 }
 
-a#bttn_anim_01 {
-    height: 8rem;
-    width: 8rem;
-    border: 8px solid white;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4rem;
-    padding-left: 1rem;
-    position: absolute;
-    left: 30vw;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform 0.3s ease-in-out;
-}
-
-a#bttn_anim_01:hover {
-    transform: translate(-50%, -50%) scale(1.1);
-    transform-origin: center;
-}
 
 .animation-one-holder {
     display: flex;
@@ -2059,9 +2214,11 @@ text {
 
 #anim_mobile object {
     display: block;
+    background: #222
 }
 
 #start_anim_mobile {
+    display: none;
     color: #fff;
 }
 
@@ -2082,5 +2239,227 @@ text {
 
     #anim_mobile.vis {
         display: block;
+    }
+}
+/* bottom animation */
+
+#bottom-animation {
+    width: 100%;
+    position: relative;
+    height: 44vw;
+}
+
+#bottom-animation object {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 6vw;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 60%;
+    transition: all 1s ease-in-out;
+}
+
+#bottom-animation.expand object {
+    width: 88%;
+    right: 6%;
+}
+
+#bttm_anim1.vis,
+#bttm_anim2.vis {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.home-animate-2 {
+    position: relative;
+}
+
+#start_anim2_mobile {
+    display: none;
+}
+
+#start_anim {
+    border: 4px solid #fff;
+    border-radius: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    padding: 2rem;
+    position: absolute;
+    left: 30vw;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.3s ease-in-out;
+}
+
+a#start_anim:hover {
+    transform: translate(-50%, -50%) scale(1.07);
+    transform-origin: center;
+}
+
+
+#start_anim2, #start_anim2_mobile {
+    padding: 1rem 4rem;
+    margin: 3rem 0;
+    left: 50%;
+    position: absolute;
+    font-size: 1.33rem;
+    white-space: nowrap;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    transform: translateX(-50%);
+}
+
+#start_anim_mobile {
+    padding: 1rem 2rem;
+    margin: 3rem 0;
+    left: 50%;
+    top: 0;
+    position: absolute;
+    font-size: 1.33rem;
+    white-space: nowrap;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    transform: translateX(-50%);
+}
+
+
+.home-animate-2 .va-btn {
+    border-color: #fff;
+    padding-left: 32px;
+    padding-right: 32px;
+    margin-top: 24px;
+}
+
+#bottom_title {
+    position: absolute;
+    width: 30%;
+    left: 6vw;
+    top: 50%;
+    transform: translate(0, -60%);
+    z-index: 2;
+    color: #fff;
+    text-align: left;
+    transition: all .5s linear;
+}
+
+#bottom_title.hidden {
+    opacity: 0;
+}
+
+#bottom_title h2,
+#bottom_title p {
+    color: #fff;
+}
+
+#bottom_title p {
+    font-size: 1.5rem;
+}
+
+
+#anim2_mobile {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+    z-index: 99;
+    box-shadow: 0 0 0 1000px rgba(0, 0, 0, .8);
+}
+
+#anim2_mobile object {
+    display: block;
+    background: #222;
+}
+
+#close_anim2_bttn {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+}
+
+#close_anim2 {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 64px;
+    z-index: 2;
+}
+
+#close_anim2.vis {
+    display: block;
+}
+
+@media screen and (max-width: 750px) {
+    .home-animate-2 {
+        padding-top: 0;
+    }
+
+    #start_anim_mobile, #start_anim2_mobile {
+        display: inline-block;
+        font-size: 1.2rem;
+    }
+
+    #start_anim, #start_anim2 {
+        display: none;
+    }
+
+    #bottom_title {
+        opacity: 1;
+        position: static;
+        width: initial;
+        transform: none;
+        text-align: center;
+        background-size: cover;
+        padding-top: 72px;
+        padding-bottom: 72px;
+    }
+
+    #bottom_title br {
+        display: none;
+    }
+
+    #bottom-animation {
+        display: none;
+    }
+
+    #anim2_mobile.vis {
+        display: block;
+    }
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+    body {
+        font-size: 1.2rem;
+    }
+    section {
+        padding: 6rem 0 0 0;
+        justify-content: left;
+        flex-direction: column;
+    }
+
+    #landing {
+        padding-top: 0;
+    }
+
+    #community, #web3 {
+        padding: 6rem 1rem 0 1rem;
+    }
+
+    h1 {
+        font-size: 2.6rem;
+        line-height: 1.2;
+    }
+    h2 {
+        font-size: 1.66rem;
+    }
+    .community-image {
+        flex: 1;
+        overflow: hidden;
+        max-height: 56px;
     }
 }
