--- a/mods/website/web/css/website-new.css
+++ b/mods/website/web/css/website-new.css
@@ -64,7 +64,7 @@ section {
     min-height: calc(var(--vh) * 100);
     width: 100%;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -100,6 +100,7 @@ h3 {
     left: 0;
     right: 0;
     bottom: 0;
+    perspective: 1px;
     scroll-snap-type: y mandatory;
 }
 
@@ -287,6 +288,7 @@ object.saito-text {
 
 .header-logo {
     height: 60px;
+    width: 160px;
     display: none;
 }
 
@@ -1483,406 +1485,6 @@ text {
     }
 
     100% {
-        transform: translate(530px, 718.2px) rotate(0deg);
-    }
-}
-
-#dots1.b {
-    animation: dots1b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots1b {
-
-    0%,
-    100% {
-        transform: translate(576px, 444px);
-    }
-
-    50% {
-        transform: translate(960px, 444px);
-    }
-}
-
-#dots2.b {
-    animation: dots2b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots2b {
-
-    0%,
-    100% {
-        transform: translate(570.8px, 596.7px) rotate(-18.8deg);
-    }
-
-    50% {
-        transform: translate(967.3px, 460.8px) rotate(-18.8deg);
-    }
-}
-
-#dots3.b {
-    animation: dots3b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots3b {
-
-    0%,
-    100% {
-        transform: translate(1180px, 236.14px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(1480px, 236.14px) rotate(0deg);
-    }
-}
-
-#dots4.b {
-    animation: dots4b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots4b {
-
-    0%,
-    100% {
-        transform: translate(1015.2px, 414.1px) rotate(-53.34deg);
-    }
-
-    50% {
-        transform: translate(1132px, 259px) rotate(-53.34deg);
-    }
-}
-
-#dots5.b {
-    animation: dots5b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots5b {
-
-    0%,
-    100% {
-        transform: translate(1162.3px, 259.5px) rotate(-126.66deg);
-    }
-
-    50% {
-        transform: translate(1282.7px, 419.5px) rotate(-126.66deg);
-    }
-}
-
-#dots6.b {
-    animation: dots6b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots6b {
-
-    0%,
-    100% {
-        transform: translate(1305.8px, 426.9px) rotate(-39.25deg);
-    }
-
-    50% {
-        transform: translate(1514.7px, 256.3px) rotate(-39.25deg);
-    }
-}
-
-#dots7.b {
-    animation: dots7b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots7b {
-
-    0%,
-    100% {
-        transform: translate(1035.9px, 444.1px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(1267.2px, 444.1px) rotate(0deg);
-    }
-}
-
-#dots8.b {
-    animation: dots8b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots8b {
-
-    0%,
-    100% {
-        transform: translate(1527.7px, 255.3px) rotate(-90deg);
-    }
-
-    50% {
-        transform: translate(1527.7px, 570px) rotate(-90deg);
-    }
-}
-
-#dots9.b {
-    animation: dots9b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots9b {
-
-    0%,
-    100% {
-        transform: translate(1012.1px, 696.9px) rotate(-90deg);
-    }
-
-    50% {
-        transform: translate(1012.1px, 461.3px) rotate(-90deg);
-    }
-}
-
-#dots10.b {
-    animation: dots10b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots10b {
-
-    0%,
-    100% {
-        transform: translate(1022.9px, 466.5px) rotate(-135deg);
-    }
-
-    50% {
-        transform: translate(1269px, 712.6px) rotate(-135deg);
-    }
-}
-
-#dots11.b {
-    animation: dots11b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots11b {
-
-    0%,
-    100% {
-        transform: translate(1292.1px, 701.8px) rotate(-90deg);
-    }
-
-    50% {
-        transform: translate(1292.1px, 466.5px) rotate(-90deg);
-    }
-}
-
-#dots12.b {
-    animation: dots12b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots12b {
-
-    0%,
-    100% {
-        transform: translate(1305.9px, 439px) rotate(-145.7deg);
-    }
-
-    50% {
-        transform: translate(1510px, 579.2px) rotate(-145.7deg);
-    }
-}
-
-#dots13.b {
-    animation: dots13b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots13b {
-
-    0%,
-    100% {
-        transform: translate(1311.9px, 720.1px) rotate(145.64deg);
-    }
-
-    50% {
-        transform: translate(1504.6px, 588.1px) rotate(145.64deg);
-    }
-}
-
-#dots14.b {
-    animation: dots14b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots14b {
-
-    0%,
-    100% {
-        transform: translate(1034.1px, 727.1px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(1269px, 727.1px) rotate(0deg);
-    }
-}
-
-#dots15.b {
-    animation: dots15b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots15b {
-
-    0%,
-    100% {
-        transform: translate(1013.4px, 754.6px) rotate(53.09deg);
-    }
-
-    50% {
-        transform: translate(1133.6px, 914.4px) rotate(53.09deg);
-    }
-}
-
-#dots16.b {
-    animation: dots16b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots16b {
-
-    0%,
-    100% {
-        transform: translate(1165.1px, 907.8px) rotate(126.91deg);
-    }
-
-    50% {
-        transform: translate(1279.8px, 755.2px) rotate(126.91deg);
-    }
-}
-
-#dots17.b {
-    animation: dots17b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots17b {
-
-    0%,
-    100% {
-        transform: translate(1306.3px, 740px) rotate(39.26deg);
-    }
-
-    50% {
-        transform: translate(1513.4px, 909.2px) rotate(39.26deg);
-    }
-}
-
-#dots18.b {
-    animation: dots18b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots18b {
-
-    0%,
-    100% {
-        transform: translate(1172.2px, 932.1px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(1494.3px, 932.1px) rotate(0deg);
-    }
-}
-
-#dots19.b {
-    animation: dots19b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots19b {
-
-    0%,
-    100% {
-        transform: translate(1527.7px, 607.9px) rotate(-90deg);
-    }
-
-    50% {
-        transform: translate(1527.7px, 911.3px) rotate(-90deg);
-    }
-}
-
-#dots20.b {
-    animation: dots20b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots20b {
-
-    0%,
-    100% {
-        transform: translate(416px, 444px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(992px, 444px) rotate(0deg);
-    }
-}
-
-#dots21.b {
-    animation: dots21b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots21b {
-
-    0%,
-    100% {
-        transform: translate(416px, 596px) rotate(-13.49deg);
-    }
-
-    50% {
-        transform: translate(1003px, 455px) rotate(-13.49deg);
-    }
-}
-
-#dots22.b {
-    animation: dots22b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots22b {
-
-    0%,
-    100% {
-        transform: translate(416px, 732px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(993px, 732px) rotate(0deg);
-    }
-}
-
-#dots23.b {
-    animation: dots23b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots23b {
-
-    0%,
-    100% {
-        transform: translate(400px, 434.2px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(530px, 434.2px) rotate(0deg);
-    }
-}
-
-#dots24.b {
-    animation: dots24b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots24b {
-
-    0%,
-    100% {
-        transform: translate(400px, 575.2px) rotate(0deg);
-    }
-
-    50% {
-        transform: translate(530px, 575.2px) rotate(0deg);
-    }
-}
-
-#dots25.b {
-    animation: dots25b 2s cubic-bezier(.6, 0, .4, 1) forwards;
-}
-
-@keyframes dots25b {
-
-    0%,
-    100% {
-        transform: translate(400px, 718.2px) rotate(0deg);
-    }
-
-    50% {
         transform: translate(530px, 718.2px) rotate(0deg);
     }
 }
