--- a/mods/website/web/style-new.css
+++ b/mods/website/web/style-new.css
@@ -1,2 +1,2 @@
-@import url("./css/website-new.css");
-@import url("./css/website-animations.css");
+@import url("./website-new.css");
+@import url("./website-animations.css");
