--- a/mods/league/web/css/league-wizard.css
+++ b/mods/league/web/css/league-wizard.css
@@ -30,13 +30,7 @@
 	padding: 1rem;
 	height: 5rem;
 	margin-bottom: 2rem;
-}
-
-#advanced-options-overlay-container .options_notice {
-	margin-bottom: 1.2rem;
-	color: var(--saito-background-color);
-	font-style: italic;
-	text-align: center;*/
+}*/
 }
 
 .game-wizard-advanced-box {
