--- a/web/saito/css-imports/saito-overlay.css
+++ b/web/saito/css-imports/saito-overlay.css
@@ -18,6 +18,9 @@
     /*min-height: 10%; Why? */
     max-height: calc(100 * var(--saito-vh));
     max-width: 100vw;
+}
+
+.saito-overlay > div:last-child {
     box-shadow: var(--shadow-overlay);
     border-radius: var(--border-radius-modal-menu);
     background-color: var(--background-color-overlay-menu); /* Dont know why had to be added manually*/
