--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -142,7 +142,7 @@
   height: calc(100vh - var(--saito-header-height));
   overflow: hidden;
   z-index: 19;
-  background: #11111179;
+  background: var(--background-color-shim-dark);
   transition: opacity 0.33s;
 }
 
