--- a/mods/website/web/website-animations.css
+++ b/mods/website/web/website-animations.css
@@ -24,6 +24,14 @@ svg#top_animation {
     position: relative;
 }
 
+.animation-one-title {
+    width: 40%;
+    overflow: visible;
+    position: absolute;
+    left: 25%;
+    transform: translateX(-50%);
+}
+
 #switch-body {
     cursor: pointer;
 }
@@ -1031,13 +1039,14 @@ text {
 
 #anim_mobile {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 0;
     right: 0;
     transform: translateY(-50%);
     z-index: 99;
     box-shadow: 0 0 0 1000px rgba(0, 0, 0, .8);
+    width: 100%;
 }
 
 #anim_mobile object {
@@ -1058,7 +1067,8 @@ text {
 
 @media screen and (max-width: 750px) {
     #top_animation {
-        display: none;
+        position: relative;
+        top: 3rem;
     }
 
     #animation-ttl {
@@ -1069,6 +1079,7 @@ text {
         display: block;
     }
 }
+
 /* bottom animation */
 
 #bottom-animation {
@@ -1097,6 +1108,7 @@ text {
 #bttm_anim2.vis {
     opacity: 1;
     pointer-events: auto;
+    scale: 1.8;
 }
 
 .home-animate-2 {
@@ -1112,22 +1124,20 @@ text {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 1rem;
-    position: absolute;
-    left: 30vw;
-    top: 50%;
-    transform: translate(-50%, -50%);
     transition: transform 0.3s ease-in-out;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-a#start_anim:hover, a#start_anim2:hover {
+a#start_anim:hover,
+a#start_anim2:hover {
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 
-#start_anim2, #start_anim2_mobile {
+#start_anim2,
+#start_anim2_mobile {
     padding: 1rem 4rem;
     margin: 3rem 0;
     left: 50%;
@@ -1141,15 +1151,9 @@ a#start_anim:hover, a#start_anim2:hover {
 
 #start_anim_mobile {
     padding: 1rem 2rem;
-    margin: 3rem 0;
-    left: 50%;
-    top: 0;
-    position: absolute;
-    font-size: 1.33rem;
     white-space: nowrap;
     border: 2px solid #fff;
     border-radius: 50px;
-    transform: translateX(-50%);
 }
 
 
@@ -1170,6 +1174,7 @@ a#start_anim:hover, a#start_anim2:hover {
     color: #fff;
     text-align: left;
     transition: all .5s linear;
+    max-width: 40%;
 }
 
 #bottom_title.hidden {
@@ -1181,14 +1186,10 @@ a#start_anim:hover, a#start_anim2:hover {
     color: #fff;
 }
 
-#bottom_title p {
-    font-size: 1.5rem;
-}
-
 
 #anim2_mobile {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 0;
     right: 0;
@@ -1223,21 +1224,37 @@ a#start_anim:hover, a#start_anim2:hover {
 @media screen and (max-width: 750px) {
 
     .animation-one-controls {
-        font-size: 2rem;
-        margin: 0 2rem;
+        display: flex;
+        flex-direction: column;
     }
 
-    
+    .animation-one-holder {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+    }
+    .animation-one-title {
+        width: 100%;
+        position: relative;
+        transform: none;
+        left: unset;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
     .home-animate-2 {
         padding-top: 0;
     }
 
-    #start_anim_mobile, #start_anim2_mobile {
+    #start_anim_mobile,
+    #start_anim2_mobile {
         display: inline-block;
         font-size: 1rem;
     }
 
-    #start_anim, #start_anim2 {
+    #start_anim,
+    #start_anim2 {
         display: none;
     }
 
@@ -1246,10 +1263,9 @@ a#start_anim:hover, a#start_anim2:hover {
         position: static;
         width: initial;
         transform: none;
-        text-align: center;
         background-size: cover;
-        padding-top: 72px;
-        padding-bottom: 72px;
+        width: unset;
+        max-width: unset;
     }
 
     #bottom_title br {
@@ -1257,7 +1273,10 @@ a#start_anim:hover, a#start_anim2:hover {
     }
 
     #bottom-animation {
-        display: none;
+        position: relative;
+        top: 10rem;
+        right: 50%;
+        transform: translateX(34%);
     }
 
     #anim2_mobile.vis {
