--- a/mods/website/web/website-new.css
+++ b/mods/website/web/website-new.css
@@ -252,6 +252,7 @@ object.saito-text {
     left: 0;
     animation: slideTextPortrait 1s ease-out 1.5s forwards;
     z-index: 999;
+    max-width: min(25vh, 50vw);
 }
 
 @keyframes slideTextPortrait {
@@ -272,7 +273,7 @@ object.saito-text {
 @media (orientation: landscape) {
     .saito-text-container {
         width: 70vw;
-        max-width: 70rem;
+        max-width: min(70rem, 50vw);
         height: auto;
         bottom: 110vh;
         left: 0;
@@ -352,11 +353,12 @@ object.saito-text {
         }
     }
 
+    /* Grid Layout for Desktop Initial State */
     .main-header:not(.scrolled) .desktop-menu {
         position: fixed;
-        top: 2rem;
-        left: 2rem;
-        width: 40%;
+        top: 13rem;
+        left: min(8vw, 5rem);
+        width: calc(60vw + 7rem);
     }
 
     .main-header:not(.scrolled) .header-logo {
@@ -367,7 +369,8 @@ object.saito-text {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 2rem;
-        width: 100%;
+        max-width: 100%;
+        margin: auto;
     }
 
     .main-header:not(.scrolled) .menu-title {
@@ -388,7 +391,7 @@ object.saito-text {
 
     .main-header:not(.scrolled) .menu-button {
         display: block;
-        width: 25rem;
+        width: min(25rem, 40vw);
         padding: 0.75rem 1rem;
         color: white;
         text-decoration: none;
@@ -588,21 +591,6 @@ object.saito-text {
 }
 
 
-/* Grid Layout for Desktop Initial State */
-@media (min-width: 768px) {
-    .main-header:not(.scrolled) .desktop-menu {
-        position: fixed;
-        top: 13rem;
-        left: 5rem;
-        width: 40%;
-    }
-
-    .main-header:not(.scrolled) .menu-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 2rem;
-    }
-}
 
 /* Update background cube styles */
 .background-cube {
@@ -627,19 +615,9 @@ object.saito-text {
 }
 
 @media (max-width: 1500px) {
-    .saito-text-container {
-        max-width: 45vw;
-    }
 
     .background-cube {
         max-width: 30vw;
-    }
-
-    .main-header:not(.scrolled) .desktop-menu {
-        position: fixed;
-        top: 3rem;
-        left: 8vw;
-        width: 40%;
     }
 
     .menu-button {
@@ -659,19 +637,13 @@ object.saito-text {
 
 
 @media (orientation: landscape) and (max-height: 1000px) {
-    .saito-text-container {
-        max-width: 45vw;
-    }
-
     .background-cube {
         max-width: 30vw;
     }
 
     .main-header:not(.scrolled) .desktop-menu {
         position: fixed;
-        top: 3rem;
         left: 8vw;
-        width: 40%;
     }
 }
 
