fix display issue in mobile

--- a/mods/website/web/css/website-new.css
+++ b/mods/website/web/css/website-new.css
@@ -838,6 +838,7 @@ object.saito-text {
         overflow: hidden;
         max-height: 56px;
         min-height: 56px;
+        min-width: 100%;
         background-image: url(/saito/img/community-cats-row.jpeg);
         background-size: cover;
         background-position: center;
