fix header blur in games

--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -29,6 +29,7 @@
   padding-right: 2rem;
   /* redefining base variable in game-layout doesn't work if people push themes on games */
   background: transparent; 
+  backdrop-filter: none;
 }
 
 #saito-header.game .saito-header-logo-wrapper, #saito-header.game .header-msg {
