smooth out problems with game queue flow

--- a/web/saito/css-imports/game-layout.css
+++ b/web/saito/css-imports/game-layout.css
@@ -33,6 +33,11 @@ body {
   user-select: none;
  }
 
+.debug-stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
 
 /*********************/
 /*  SIZING ISSUES    */
