one last piece of css

--- a/mods/migration/web/css/migration-base.css
+++ b/mods/migration/web/css/migration-base.css
@@ -10,6 +10,7 @@
 	border: 1px solid var(--saito-border-color);
 	padding: 7rem;
 	background: linear-gradient(135deg, #0008, #0000);
+	max-width: 800px;
 }
 
 input[type='text'] {
