--- a/mods/website/web/css/website-new.css
+++ b/mods/website/web/css/website-new.css
@@ -247,9 +247,9 @@ h2+p {
     flex-direction: column;
     align-items: center;
     padding: 1.5rem;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid #fff8;
     border-radius: 1rem;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.1) 100%);
+    background: linear-gradient(135deg, #fff2 0%, #fff0 100%);
 }
 
 .feature-card h1 {
